2010-11-08  Murray Cumming  <murrayc@murrayc.com>

	Add the Grid container widget.

  * tools/extra_defs_gen/generate_defs_gtk.cc: Mention GTK_TYPE_GRID.
  * gtk/src/gtk_signals.defs: Added the generated part for GtkGrid.
  * gtk/src/filelist.am:
	* gtk/src/grid.[hg|ccg]:
	* gtk/gtkmm.h: Added the Grid container widget.

2010-11-05  José Alburquerque  <jaalburqu@svn.gnome.org>

	Style: Fix the clone_vfunc() implementation.

	* gtk/src/style.hg: Modify the clone_vfunc() to take an extra
	reference of the GtkStyle obtained from the base class.  This is so
	that the clone_vfunc_callback() does not lose its last reference after
	it executes.

	Fixes GNOME Bug #633975 (mario).

2010-11-04  Murray Cumming  <murrayc@murrayc.com>

	Widget: Remove the deprecated size-request signal.

	* gtk/src/widget.hg: Do not wrap the size_request signal because it is
	deprecated and will soon be removed.

2.91.3:

2010-11-02  Murray Cumming  <murrayc@murrayc.com>

  Fix the make check build.

  * gtk/gtkmm.h: Add a gdkmm/dragcontext.h include that fixes a weird
  compilation problem in the tests (during make check). We need to find out
  what the real problem is.

2010-11-02  Murray Cumming  <murrayc@murrayc.com>

	Avoid includes of gtk/gtk.h.

	* gtk/src/activatable.hg:
	* gtk/src/buildable.hg:
	* gtk/src/editable.hg:
	* gtk/src/orientable.hg:
	* gtk/src/printoperationpreview.hg:
	* gtk/src/recentchooser.hg:
	* gtk/src/scrollable.hg:
	* gtk/src/toolshell.hg:
	* gtk/src/treesortable.hg: Add a typedef for the C interface structs instead
	of including gtk/gtk.h.

2010-11-02  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* gdk/src/dragcontext.hg: Include cairomm/surface.h.

2010-11-02  Murray Cumming  <murrayc@murrayc.com>

	Wrapped new API.

	* gdk/src/gdk_methods.defs: Regenerated with h2defs.py.
	* gdk/src/gdk_extra.defs: Added gtk_drag_set_icon_surface.
	* gdk/src/dragcontext.hg: Add a conversion for Cairo::Surface.