@@ -61,7 +61,7 @@ void Window::destroy_()
   //GTKMM_LIFECYCLE
 
   #ifdef GLIBMM_DEBUG_REFCOUNTING
-  g_warning("Gtk::Window::destroy_(): gobject_: %10X\n", gobject_);
+  g_warning("Gtk::Window::destroy_(): gobject_: %p\n", (void*) gobject_);
   if(gobject_)
    g_warning("  gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
   #endif
@@ -84,7 +84,7 @@ void Window::_release_c_instance()
   //We override this, (though it's not virtual - we just call it from this class),
   //because top-level windows can only be destroyed with gtk_widget_destroy, according to Owen Taylor. murrayc.
   #ifdef GLIBMM_DEBUG_REFCOUNTING
-  g_warning("Gtk::Window::_destroy_c_instance() gobject_=%10X\n", gobject_);
+  g_warning("Gtk::Window::_destroy_c_instance() gobject_=%p\n", (void*) gobject_);
   #endif
 
   cpp_destruction_in_progress_ = true;
