@@ -1,3 +1,11 @@
+2010-11-08  Krzesimir Nowak  <qdlacz@gmail.com>
+
+	Fixed warnings in refcount debugging messages.
+
+	* gtk/gtkmm/object.cc:
+	* gtk/src/window.ccg: Used %p format parameter to print addresses of GObjects
+	and cast 'this' and GObjects to void*.
+
 2010-11-08  Murray Cumming  <murrayc@murrayc.com>
 
 	Add the Grid container widget.
